Upgrade Temporal and clean test JVM warnings